[package]
name = "rust-classicube-roll-plugin"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
classicube = { path = "../rust-classicube" }
rand = "0.7.2"
arrayvec = "0.5.0"
