[package]
name = "rust-classicube-roll-plugin"
version = "1.0.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
rand = "0.7.2"
